detail apis integrated

--- a/Find One/Info.plist
+++ b/Find One/Info.plist
@@ -27,6 +27,10 @@
 		<string>Outfit-Medium</string>
 		<string>Outfit-Light</string>
 	</array>
+	<key>NSLocationAlwaysUsageDescription</key>
+	<string>Will you allow this app to always know your location?</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>Do you allow this app to know your current location?</string>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
